Text according to Dominika & formatting.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -93,21 +93,30 @@
    Při řešení úloh, ať už malých, či velkých, dodržuj etická pravidla semináře:
    </p>
 
-   <ul>
+   <ol>
     <li><p>
-     Řešení musí být zpracována samostatně. Opisování, stejně jako vyzrazení
-     řešení, bude hodnoceno 0 body a diskvalifikací z možnosti stát se pro
-     ročník úspěšným řešitelem (za úspěšné považujeme totiž jen ty, kteří
-     nepodvádějí).
+      <strong>Všechna řešení musí být vypracována samostatně.</strong>
+    </p><p>
+      Opisování, stejně jako vyzrazení řešení, bude hodnoceno 0 body a
+      odebráním možnosti stát se v aktuálním ročníku úspěšným řešitelem (za
+      úspěšné považujeme jen ty, kteří nepodvádějí).
+    </p><p>
+    S kamarády nebo třeba uriteli můžeš o úloze diskutovat, ale jen do míry
+    <i>encyklopedických znlostí</i>. Můžeš se tedy třeba bavit o tom, jakou
+    složitost má algoritmus Quick sort, ale nemůžte společně řešit programovací
+    modul.
     </p></li>
 
     <li><p>
-     Pokud jsi použili při řešení nějaký externí zdroj (literaturu, webovou
-     stránku, apod.), a čerpal jsi odtud nějakou klíčovou myšlenku, nebo třeba
-     kus textu, musíš tento zdroj uvést formou odkazu, na základě kterého
-     budeme moct tento zdroj dohledat.
+     <strong>Externí zdroje cituj.</strong>
+    </p>
+    <p>
+     Pokud používáš při řešení nějaký externí zdroj (literaturu, webovou
+     stránku, konzultaci s kamarádem, apod.) a čerpáš odtud nějakou klíčovou
+     myšlenku, nebo třeba kus textu, musíš tento zdroj uvést formou odkazu, na
+     základě kterého budeme moct tento zdroj dohledat.
     </p></li>
-   </ul>
+   </ol>
 
  <h2 id="calendar">Kalendář akcí KSI</h2>
   <p>
