--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -101,10 +101,10 @@
       odebráním možnosti stát se v aktuálním ročníku úspěšným řešitelem (za
       úspěšné považujeme jen ty, kteří nepodvádějí).
     </p><p>
-    S kamarády nebo třeba uriteli můžeš o úloze diskutovat, ale jen do míry
-    <i>encyklopedických znlostí</i>. Můžeš se tedy třeba bavit o tom, jakou
-    složitost má algoritmus Quick sort, ale nemůžte společně řešit programovací
-    modul.
+    S kamarády nebo třeba učiteli můžeš o úloze diskutovat, ale jen do míry
+    <i>encyklopedických znalostí</i>. Můžeš se tedy třeba bavit o tom, jakou
+    složitost má algoritmus Quick sort, ale nemůžeš společně s kamarádem řešit
+    programovací úlohu.
     </p></li>
 
     <li><p>
