remove forced line wrapping

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,198 +1,121 @@
 <section class="container content-section autojustify" style="margin-bottom:40px;">
- <h2 id="about">O KSI</h2>
-  <p>
-  KSI, neboli Korespondenční seminář z informatiky, je celoroční soutěž
-  organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem
-  semináře je seznámit řešitele se zajímavými oblastmi informatiky
-  a procvičit programátorské, matematické a logické myšlení. Seminář je
-  uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech
-  procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí
-  pokořit hlavní soutěžní úlohy.
+  <h2 id="about">O KSI</h2>
+  <p>KSI, neboli Korespondenční seminář z informatiky, je celoroční soutěž organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení.
+    Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
   </p>
 
 
   <h3>Jak seminář probíhá?</h3>
-   <p>
-   Středobodem semináře je graf úloh, který se snažíš projít a po cestě
-   vyřešit co nejvíce úloh zvládneš.  Některé části grafu představují základní
-   myšlenky, pojmy a postupy a obsahují jednoduché úlohy, jejichž správnost se
-   vyhodnocuje okamžitě automaticky.  Jiné obsahují hlavní soutěžní úlohy, na
-   jejichž vyřešení a sepsání máš zhruba jeden měsíc.  Po termínu odevzdání se
-   úloha uzamkne, my tvoje řešení opravíme, přidělíme ti za něj body,
-   poskytneme ti k němu zpětnou vazbu a zveřejníme vzorové řešení úlohy.
-   Soutěžní úlohy jsou pak různého charakteru a zatímco nejjednodušší úlohy by
-   po projití úvodních uzlů grafu měl zvládnout každý, nad tou nejtěžší se
-   může zapotit i ostřílený řešitel programátorských soutěží.
-   </p>
-
-   <p>
-   S ostatními účastníky i organizátory semináře se můžeš během roku potkat na
-   několika výletech.  Koncem školního roku pak vyhlásíme výsledky a nejlepší
-   řešitele pozveme na <a href="https://kscuk.fi.muni.cz/">týdenní soustředění
-   K-SCUK</a>.  Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 %
-   celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez
-   přijímacích zkoušek.
-   </p>
-
-  <h3>Jaké úlohy mám očekávat?</h3>
-   <p>
-   Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského
-   problému.  Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu,
-   jindy po tobě budeme chtít i program v Pythonu.  Pokud programovat neumíš
-   nebo programuješ v jiném jazyce, nemusíš se ničeho bát.  Python tě pomocí
-   cvičných příkladů rychle naučíme.  Vždyť přece kolik jazyků umíš, tolikrát
-   jsi člověkem. ;)
-   </p>
-
-   <p>
-   Některé z našich úloh mohou být složité nebo pracné, i když s dobrým
-   nápadem se většinou dají vyřešit rychle a elegantně. Není třeba vyřešit
-   všechny úlohy &ndash; pošli nám, co zvládneš, a zbytek si po uzavření úlohy
-   můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu
-   kompletně dořešenou. I pokud máš jen nějaké nápady co s ní, napiš nám je
-   a my tvoji snahu určitě oceníme.</p>
-
-  <h3>Proč se účastnit?</h3>
-   <ul>
-    <li><p>
-     Procvičíš si programátorské, matematické a logické myšlení a schopnost
-     řešit nelehké problémy s využitím počítače. Získáš nové znalosti a naučíš
-     se algoritmy běžně používané v každodenní programátorské praxi.
-    </p></li>
-
-    <li><p>
-     Naučíš se své myšlenky jasně formulovat a srozumitelně vyjadřovat.
-    </p></li>
-
-    <li><p>
-     Připravíš se na programátorské i jiné soutěže, např. na matematickou
-     olympiádu kategorie P, ale také na budoucí přijímací zkoušky či pohovory.
-     Trénink je základ úspěchu!
-    </p></li>
-
-    <li><p>
-     Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe
-     rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš
-     mírný náskok na své budoucí spolužáky.
-    </p></li>
-
-    <li><p>
-     Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu
-     informatiky MU bez přijímacích zkoušek.
-    </p></li>
-
-    <li><p>
-     A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě <a
-     href="https://kscuk.fi.muni.cz/">týdenního soustředění</a>.
-    </p></li>
-
-   </ul>
-
-  <h3 id="rules">Pravidla semináře</h3>
-   <p>
-   Při řešení úloh, ať už malých, či velkých, dodržuj etická pravidla semináře:
-   </p>
-
-   <ol>
-    <li><p>
-      <strong>Všechna řešení musí být vypracována samostatně.</strong>
-    </p><p>
-      Opisování, stejně jako vyzrazení řešení, bude hodnoceno 0 body a
-      odebráním možnosti stát se v aktuálním ročníku úspěšným řešitelem (za
-      úspěšné považujeme jen ty, kteří nepodvádějí).
-    </p><p>
-    S kamarády nebo třeba učiteli můžeš o úloze diskutovat, ale jen do míry
-    <i>encyklopedických znalostí</i>. Můžeš se tedy třeba bavit o tom, jakou
-    složitost má algoritmus Quick sort, ale nemůžeš společně s kamarádem řešit
-    programovací úlohu.
-    </p></li>
-
-    <li><p>
-     <strong>Externí zdroje cituj.</strong>
-    </p>
-    <p>
-     Pokud používáš při řešení nějaký externí zdroj (literaturu, webovou
-     stránku, konzultaci s kamarádem, apod.) a čerpáš odtud nějakou klíčovou
-     myšlenku, nebo třeba kus textu, musíš tento zdroj uvést formou odkazu, na
-     základě kterého budeme moct tento zdroj dohledat.
-    </p></li>
-   </ol>
-
- <h2 id="calendar">Kalendář akcí KSI</h2>
   <p>
-  Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do
-  <a
-  href="https://calendar.google.com/calendar/embed?src=07cn4qi2qm1g3rtpuls78dmsbg%40group.calendar.google.com"
-  target="_blank">Google kalendáře KSI</a>. Tento kalendář si můžeš <a
-  href="https://calendar.google.com/calendar/render?cid=07cn4qi2qm1g3rtpuls78dmsbg@group.calendar.google.com#main_7"
-  target="_blank">importovat</a>.
+    Středobodem semináře je graf úloh, který se snažíš projít a po cestě vyřešit co nejvíce úloh zvládneš.
+    Některé části grafu představují základní myšlenky, pojmy a postupy a obsahují jednoduché úlohy, jejichž správnost se vyhodnocuje okamžitě automaticky.
+    Jiné obsahují hlavní soutěžní úlohy, na jejichž vyřešení a sepsání máš zhruba jeden měsíc.
+    Po termínu odevzdání se úloha uzamkne, my tvoje řešení opravíme, přidělíme ti za něj body, poskytneme ti k němu zpětnou vazbu a zveřejníme vzorové řešení úlohy.
+    Soutěžní úlohy jsou pak různého charakteru a zatímco nejjednodušší úlohy by po projití úvodních uzlů grafu měl zvládnout každý, nad tou nejtěžší se může zapotit i ostřílený řešitel programátorských soutěží.
   </p>
 
- <h2 id="faq">FAQ</h2>
+  <p>
+    S ostatními účastníky i organizátory semináře se můžeš během roku potkat na několika výletech.
+    Koncem školního roku pak vyhlásíme výsledky a nejlepší řešitele pozveme na <a href="https://kscuk.fi.muni.cz/">týdenní soustředění K-SCUK</a>.
+    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.
+  </p>
+
+  <h3>Jaké úlohy mám očekávat?</h3>
+  <p>
+    Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského problému.
+    Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu, jindy po tobě budeme chtít i program v Pythonu.
+    Pokud programovat neumíš nebo programuješ v jiném jazyce, nemusíš se ničeho bát.
+    Python tě pomocí cvičných příkladů rychle naučíme.
+    Vždyť přece kolik jazyků umíš, tolikrát jsi člověkem. ;)
+  </p>
+  <p>Některé z našich úloh mohou být složité nebo pracné, i když s dobrým nápadem se většinou dají vyřešit rychle a elegantně. Není třeba vyřešit všechny úlohy &ndash; pošli nám, co zvládneš, a zbytek si po uzavření úlohy můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I pokud máš jen nějaké nápady co s ní, napiš nám je a my tvoji snahu určitě oceníme.</p>
+
+  <h3>Proč se účastnit?</h3>
+  <ul>
+    <li><p>Procvičíš si programátorské, matematické a logické myšlení a schopnost řešit nelehké problémy s využitím počítače. Získáš nové znalosti a naučíš se algoritmy běžně používané v každodenní programátorské praxi.</p></li>
+
+    <li><p>Naučíš se své myšlenky jasně formulovat a srozumitelně vyjadřovat.</p></li>
+
+    <li><p>Připravíš se na programátorské i jiné soutěže, např. na matematickou olympiádu kategorie P, ale také na budoucí přijímací zkoušky či pohovory. Trénink je základ úspěchu!</p></li>
+
+    <li><p>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</p></li>
+
+    <li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
+
+    <li><p>A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě <a href="https://kscuk.fi.muni.cz/">týdenního soustředění</a>.</p></li>
+
+  </ul>
+
+  <h3 id="rules">Pravidla semináře</h3>
+  <p>
+    Při řešení úloh, ať už malých, či velkých, dodržuj etická pravidla semináře:
+  </p>
+
+  <ol>
+    <li>
+      <p><strong>Všechna řešení musí být vypracována samostatně.</strong></p>
+      <p>Opisování, stejně jako vyzrazení řešení, bude hodnoceno 0 body a odebráním možnosti stát se v aktuálním ročníku úspěšným řešitelem (za úspěšné považujeme jen ty, kteří nepodvádějí).</p>
+      <p>S kamarády nebo třeba učiteli můžeš o úloze diskutovat, ale jen do míry <i>encyklopedických znalostí</i>. Můžeš se tedy třeba bavit o tom, jakou složitost má algoritmus Quick sort, ale nemůžeš společně s kamarádem řešit programovací úlohu.</p>
+    </li>
+
+    <li>
+      <p><strong>Externí zdroje cituj.</strong></p>
+      <p>Pokud používáš při řešení nějaký externí zdroj (literaturu, webovou stránku, konzultaci s kamarádem, apod.) a čerpáš odtud nějakou klíčovou myšlenku, nebo třeba kus textu, musíš tento zdroj uvést formou odkazu, na základě kterého budeme moct tento zdroj dohledat.</p></li>
+  </ol>
+
+  <h2 id="calendar">Kalendář akcí KSI</h2>
+  <p>
+    Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do
+    <a href="https://calendar.google.com/calendar/embed?src=07cn4qi2qm1g3rtpuls78dmsbg%40group.calendar.google.com" target="_blank">Google kalendáře KSI</a>. Tento kalendář si můžeš <a href="https://calendar.google.com/calendar/render?cid=07cn4qi2qm1g3rtpuls78dmsbg@group.calendar.google.com#main_7" target="_blank">importovat</a>.
+  </p>
+
+  <h2 id="faq">FAQ</h2>
 
   <div class="panel panel-ksi">
-    <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať
-    riešenie v slovenčine?</div>
+    <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať riešenie v slovenčine?</div>
     <div class="panel-body">
-      A: Jistě. V organizátorském týmu máme dokonce několik Slováků, takže se
-      slovenština občas objeví i v zadání.
+      A: Jistě. V organizátorském týmu máme dokonce několik Slováků, takže se slovenština občas objeví i v zadání.
     </div>
   </div>
 
   <div class="panel panel-ksi">
-    <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel
-    semináře?</div>
+    <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel semináře?</div>
     <div class="panel-body">
       A: Kdokoliv, kdo dosáhne alespoň 60 % celkového počtu bodů.
     </div>
   </div>
 
   <div class="panel panel-ksi">
-    <div class="panel-heading panel-heading-ksi">Q: Dozvěděl jsem se o semináři
-    pozdě, první vlna už proběhla. Je možné se ještě přihlásit do
-    semináře?</div>
+    <div class="panel-heading panel-heading-ksi">Q: Dozvěděl jsem se o semináři pozdě, první vlna už proběhla. Je možné se ještě přihlásit do semináře?</div>
     <div class="panel-body">
-      A: Jistě, do semináře se můžeš přihlásit kdykoli. Pouze se snižuje tvá
-      šance stát se úspěšným řešitelem.
+      A: Jistě, do semináře se můžeš přihlásit kdykoli. Pouze se snižuje tvá šance stát se úspěšným řešitelem.
     </div>
   </div>
 
   <div class="panel panel-ksi">
-    <div class="panel-heading panel-heading-ksi">Q: Budu-li úspěšný řešitel KSI
-    např. v 2. ročníku, budu po maturitě přijat na FI bez přijímaček?</div>
+    <div class="panel-heading panel-heading-ksi">Q: Budu-li úspěšný řešitel KSI např. v 2. ročníku, budu po maturitě přijat na FI bez přijímaček?</div>
     <div class="panel-body">
-      A: Téměř určitě ano. Organizátoři KSI ale nemohou hovořit za fakultu v
-      otázce přijímacího řízení, proto doporučujeme zjistit aktuální informace
-      na <a
-      href="https://www.fi.muni.cz/admission/info-bachelor.html.cs">oficiálních
-      stránkách Fakulty informatiky MU</a>.
+      A: Téměř určitě ano. Organizátoři KSI ale nemohou hovořit za fakultu v otázce přijímacího řízení, proto doporučujeme zjistit aktuální informace na <a href="https://www.fi.muni.cz/admission/info-bachelor.html.cs">oficiálních stránkách Fakulty informatiky MU</a>.
     </div>
   </div>
 
   <div class="panel panel-ksi">
-    <div class="panel-heading panel-heading-ksi">Q: Mohu řešit KSI i když
-    nejsem student střední školy?</div>
+    <div class="panel-heading panel-heading-ksi">Q: Mohu řešit KSI i když nejsem student střední školy?</div>
     <div class="panel-body">
       A: Ano, KSI může řešit kdokoli.
     </div>
   </div>
 
   <div class="panel panel-ksi">
-    <div class="panel-heading panel-heading-ksi">Q: Jsem v maturitním ročníku,
-    mám šanci být přijat na FI skrze vyřešení KSI?</div>
+    <div class="panel-heading panel-heading-ksi">Q: Jsem v maturitním ročníku, mám šanci být přijat na FI skrze vyřešení KSI?</div>
     <div class="panel-body">
-      A: Ano, seminář ukončujeme vždy tak, abychom stihli vedení FI poslat
-      seznam úspěšných řešitelů před uzavřením přijímacího řízení.  Podej si
-      žádost o prominutí přijímací zkoušky v řádném termínu. Pokud se staneš
-      úspěšným řešitelem KSI, budeš určitě přijat.
+      A: Ano, seminář ukončujeme vždy tak, abychom stihli vedení FI poslat seznam úspěšných řešitelů před uzavřením přijímacího řízení.
+      Podej si žádost o prominutí přijímací zkoušky v řádném termínu. Pokud se staneš úspěšným řešitelem KSI, budeš určitě přijat.
     </div>
   </div>
 
   <hr>
 
-  <p>
-  Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a
-  href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.
-  </p>
+  <p>Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
 
 </section>
