--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -1,5 +1,6 @@
 <div style="margin:20px">
     <h3 class="visible-print">Řešení</h3>
+    <h1>!!! {{model.feedbacks.filled}} !!!</h1>
     {{#if model.details.solution}}
         <div id="task-solution">
             {{{model.details.solution}}}
