--- a/app/templates/task/assignment.hbs
+++ b/app/templates/task/assignment.hbs
@@ -17,6 +17,7 @@
     {{/if}}
   </div>
   {{#if finished}}
+    {{task-feedback feedbacks=model.feedbacks store=store}}
     <div class="text-center hidden-print">
         {{#link-to "tasks" type="button" class="btn btn-primary btn-lg"}}
         <h3>Pokračovat dále</h3>
