feedback to user and design changes

--- a/app/templates/components/task-feedback.hbs
+++ b/app/templates/components/task-feedback.hbs
@@ -1,5 +1,6 @@
-<h3>Pomůžeš nám feedbackem?</h3>
-<div id="task-feedback" style="margin: 20px; width: 470px;">
+<br><hr><br>
+<h3 style="text-align: center;">Pomůžeš nám feedbackem?</h3>
+<div id="task-feedback" style="width: 470px; margin: auto;">
     {{#each feedbacks.categories as |singleFeedback|}}
         <div class="single_feedback_category">
             <label for="{{singleFeedback.id}}">{{singleFeedback.text}}</label>
@@ -50,6 +51,12 @@
         </div>
     {{/each}}
     <div class="form-group">
-        <button {{action "saveTest"}} class="btn btn-primary">Submit Feedback</button>
+        <button {{action "saveTaskFeedback"}} class="btn btn-primary">Odeslat feedback</button>
     </div>
+
+    {{#if save_status}}
+        {{ale-rt type="info" style="margin-top:20px;" closeBtn=true text=save_status}}
+    {{/if}}
+
 </div>
+<br>
