--- a/app/styles/utils/task-feedback.scss
+++ b/app/styles/utils/task-feedback.scss
@@ -8,7 +8,7 @@
   }
   .rating-stars ul > li.star {
     display:inline-block;
-    
+    cursor: pointer;
   }
   
   /* Idle State of the stars */
